Improve developer tools

--- a/style/new.css
+++ b/style/new.css
@@ -40,11 +40,6 @@ body
     align-items: center;
 }
 
-#clipCountText
-{
-    padding-left: 10px;
-}
-
 #leftColumn, #middleColumn, #rightColumn
 {
     background: #333;
@@ -55,7 +50,7 @@ body
 
 #btnMakePaperclip
 {
-    margin-left: 20px;
+    margin-right: 20px;
     background: #333;
     padding: 7px 10px;
 }
@@ -163,4 +158,32 @@ select
 table.table2 td
 {
     border-color: #555;
+}
+
+#clipCountCrunched, #devButtons
+{
+    display: none;
+}
+
+#devButtons button
+{
+    background: #222;
+    border: none;
+    box-shadow: none;
+    border-radius: 20px;
+    outline: none;
+    padding: 4px 10px;
+    color: #ccc;
+    text-shadow: none;
+    margin-bottom: 5px;
+}
+
+#devButtons button:hover
+{
+    background: #444;
+}
+
+#devButtons button:active
+{
+    background: #111;
 }
