--- a/style/new.css
+++ b/style/new.css
@@ -11,6 +11,7 @@ body
     background: #111;
     border-radius: 20px;
     margin-bottom: 10px;
+    box-shadow: #111 0 0 15px;
 }
 
 #giftShopDiv
@@ -46,6 +47,7 @@ body
     margin-top: 10px;
     padding: 10px;
     border-radius: 20px;
+    box-shadow: #111 0 0 15px;
 }
 
 #btnMakePaperclip
@@ -53,6 +55,7 @@ body
     margin-right: 20px;
     background: #333;
     padding: 7px 10px;
+    box-shadow: #111 0 0 15px;
 }
 
 .button2, .button2:hover, .button2:active, .button2:disabled
@@ -163,6 +166,11 @@ table.table2 td
 #clipCountCrunched, #devButtons
 {
     display: none;
+}
+
+#clipCountText
+{
+    text-shadow: #111 0 0 15px;
 }
 
 #devButtons button
