--- a/style/new.css
+++ b/style/new.css
@@ -11,7 +11,7 @@ body
     background: #111;
     border-radius: 20px;
     margin-bottom: 10px;
-    box-shadow: #111 0 0 15px;
+    box-shadow: #111 0 0 10px;
 }
 
 #giftShopDiv
@@ -47,7 +47,7 @@ body
     margin-top: 10px;
     padding: 10px;
     border-radius: 20px;
-    box-shadow: #111 0 0 15px;
+    box-shadow: #111 0 0 10px;
 }
 
 #devColumn
@@ -62,7 +62,7 @@ body
     margin-right: 20px;
     background: #333;
     padding: 7px 10px;
-    box-shadow: #111 0 0 15px;
+    box-shadow: #111 0 0 10px;
 }
 
 .button2, .button2:hover, .button2:active, .button2:disabled
@@ -102,12 +102,23 @@ hr
     border-color: #aaa;
 }
 
-.projectButton
+.projectButton, .projectButton:hover, .projectButton:disabled
 {
     background: #444;
     border: none;
     border-radius: 15px;
     color: inherit;
+}
+
+.projectButton:hover
+{
+    background: #555;
+}
+
+.projectButton:disabled
+{
+    background: #2b2b2b;
+    color: #444;
 }
 
 .qEngine
@@ -177,7 +188,7 @@ table.table2 td
 
 #clipCountText
 {
-    text-shadow: #111 0 0 15px;
+    text-shadow: #111 0 0 10px;
 }
 
 #devColumn button
